# cs_go_parser_bot

./: app.py  main.py  pyproject.toml  requirements.txt  testSCH.py
handlers/: config.py  dispatcher.py  imports.py
html files/: csgo.html  result.html
logs/: run_info.csv
registers/: links_available.txt
